form alignment issues

--- a/src/components/navigation/style.css
+++ b/src/components/navigation/style.css
@@ -3,8 +3,8 @@
 }
 
 .nav-link {
-    padding-left: 30px !important;
-    padding-right: 30px !important;
+    padding-left: 100px !important;
+    padding-right: 100px !important;
 }
 
 /*TABLET VIEW*/
